Edit dispaly formt

--- a/templates/views/index.hbs
+++ b/templates/views/index.hbs
@@ -15,9 +15,12 @@
             <input placeholder="Location">
             <button>Search</button>
         </form>
-
+        <h2 id="headLoc"></h2>
         <p id="message1"></p>
+        <h2 id="headCur"></h2>
         <p id="message2"></p>
+        <h2 id="headToy"></h2>
+        <p id="message3"></p>
         </div>
        
         {{>footer}}
