--- a/templates/views/about.hbs
+++ b/templates/views/about.hbs
@@ -8,6 +8,7 @@
     <body>
         <div class="main-content">
         {{>header}} </br>
+        <p>This page get data from mapbox.com and darksky.net</p>
          <img class="portrait" src="/img/me.jpg">
         </div>
         {{>footer}}
